# patchy

./: CHANGELOG.md  Cargo.toml  README.md  TODO.md  default.nix  dist-workspace.toml  example-config.toml  flake.nix  plan.md  shell.nix
.github/workflows/: release.yml
.gitpatcher/: config.toml  remove-tab.patch
.patchy/: config.toml
docs/: CNAME  README.md  index.html  styles.css
src/: backup.rs  commands.rs  flags.rs  git_cmd.rs  git_commands.rs  lib.rs  log.rs  main.rs  types.rs  utils.rs
src/commands/: gen_patch.rs  help.rs  init.rs  mod.rs  pr_fetch.rs  run.rs
wix/: main.wxs
